# occt-rt-python

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: build-conda.yml
ci/conda/: bld.bat  build.sh  meta.yaml
occt_rt/: __init__.py  raytracer.py
src/swig/wrapper/: OCCTRT.i
test/: test_raytracer.py
